# osucat

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
osucat/: CMakeLists.txt  main.cpp  main.h
osucat/include/easywsclient/: easywsclient.cpp
osucat/include/oppai-cpp/: oppai.hpp
osucat/sdk/: client.hpp  cqhttp_api.hpp  utils.hpp
osucat/src/: addons.hpp  badge.hpp  exception.hpp  image.hpp  main.hpp  message.h  osucat.hpp  steamcat.hpp
osucat/src/games/: hangman.hpp
osucat/src/include/: mysql.hpp  osu_api.hpp  winhttp.hpp
osucat/src/include/oppai-cpp/: oppai.hpp
osucat/src/include/oppai-cpp/oppai/: mods.hpp  oppai.c
